--- a/.github/workflows/mlops-ci-workflow.yaml
+++ b/.github/workflows/mlops-ci-workflow.yaml
@@ -49,3 +49,21 @@ jobs:
           docker rm mlflow-server 
           docker rmi ghcr.io/mlflow/mlflow:latest
 
+      - name: login to docker hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: setup docker buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: build and push docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: "Dockerfile"
+          push: true
+          tags: issacpaul/fastapi:{{github.sha}}
+
+
