--- a/.github/workflows/mlops-ci-workflow.yaml
+++ b/.github/workflows/mlops-ci-workflow.yaml
@@ -64,6 +64,6 @@ jobs:
           context: .
           file: "Dockerfile"
           push: true
-          tags: issacpaul/fastapi:{{github.sha}}
+          tags: issacpaul/fastapi:${{github.sha}}
 
 
